WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106023
[Microdata] Fix build failure after
r137003
https://bugs.webkit.org/show_bug.cgi?id=106023
Summary
[Microdata] Fix build failure after r137003
Arko Saha
Reported
2013-01-03 11:21:01 PST
After revision 137003 microdata enabled build is failing in Chromium port with below errors : Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.cpp: In static member function ‘static v8::Handle<v8::Value> WebCore::V8HTMLCollection::namedPropertyGetter(v8::Local<v8::String>, const v8::AccessorInfo&)’: Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.cpp:58:123: error: cannot convert ‘WTF::PassRefPtr<WebCore::PropertyNodeList>’ to ‘WebCore::PropertyNodeList*’ in initialization Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.cpp:61:59: error: no matching function for call to ‘toV8(WebCore::PropertyNodeList*&, v8::Local<v8::Object>, v8::Isolate*)’ Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.cpp:61:59: note: candidates are: In file included from Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.cpp:32:0: out/Release/obj/gen/webkit/bindings/V8HTMLCollection.h:60:30: note: v8::Handle<v8::Value> WebCore::toV8(WebCore::HTMLCollection*, v8::Handle<v8::Object>, v8::Isolate*) out/Release/obj/gen/webkit/bindings/V8HTMLCollection.h:60:30: note: no known conversion for argument 1 from ‘WebCore::PropertyNodeList*’ to ‘WebCore::HTMLCollection*’ out/Release/obj/gen/webkit/bindings/V8HTMLCollection.h:87:30: note: v8::Handle<v8::Value> WebCore::toV8(WTF::PassRefPtr<WebCore::HTMLCollection>, v8::Handle<v8::Object>, v8::Isolate*) out/Release/obj/gen/webkit/bindings/V8HTMLCollection.h:87:30: note: no known conversion for argument 1 from ‘WebCore::PropertyNodeList*’ to ‘WTF::PassRefPtr<WebCore::HTMLCollection>’ In file included from Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.cpp:38:0: out/Release/obj/gen/webkit/bindings/V8HTMLAllCollection.h:68:30: note: v8::Handle<v8::Value> WebCore::toV8(WebCore::HTMLAllCollection*, v8::Handle<v8::Object>, v8::Isolate*) out/Release/obj/gen/webkit/bindings/V8HTMLAllCollection.h:68:30: note: no known conversion for argument 1 from ‘WebCore::PropertyNodeList*’ to ‘WebCore::HTMLAllCollection*’ out/Release/obj/gen/webkit/bindings/V8HTMLAllCollection.h:95:30: note: v8::Handle<v8::Value> WebCore::toV8(WTF::PassRefPtr<WebCore::HTMLAllCollection>, v8::Handle<v8::Object>, v8::Isolate*) out/Release/obj/gen/webkit/bindings/V8HTMLAllCollection.h:95:30: note: no known conversion for argument 1 from ‘WebCore::PropertyNodeList*’ to ‘WTF::PassRefPtr<WebCore::HTMLAllCollection>’ In file included from Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.cpp:39:0: out/Release/obj/gen/webkit/bindings/V8HTMLFormControlsCollection.h:66:30: note: v8::Handle<v8::Value> WebCore::toV8(WebCore::HTMLFormControlsCollection*, v8::Handle<v8::Object>, v8::Isolate*) out/Release/obj/gen/webkit/bindings/V8HTMLFormControlsCollection.h:66:30: note: no known conversion for argument 1 from ‘WebCore::PropertyNodeList*’ to ‘WebCore::HTMLFormControlsCollection*’ out/Release/obj/gen/webkit/bindings/V8HTMLFormControlsCollection.h:93:30: note: v8::Handle<v8::Value> WebCore::toV8(WTF::PassRefPtr<WebCore::HTMLFormControlsCollection>, v8::Handle<v8::Object>, v8::Isolate*) out/Release/obj/gen/webkit/bindings/V8HTMLFormControlsCollection.h:93:30: note: no known conversion for argument 1 from ‘WebCore::PropertyNodeList*’ to ‘WTF::PassRefPtr<WebCore::HTMLFormControlsCollection>’ In file included from Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.cpp:40:0: out/Release/obj/gen/webkit/bindings/V8HTMLOptionsCollection.h:70:30: note: v8::Handle<v8::Value> WebCore::toV8(WebCore::HTMLOptionsCollection*, v8::Handle<v8::Object>, v8::Isolate*) out/Release/obj/gen/webkit/bindings/V8HTMLOptionsCollection.h:70:30: note: no known conversion for argument 1 from ‘WebCore::PropertyNodeList*’ to ‘WebCore::HTMLOptionsCollection*’ out/Release/obj/gen/webkit/bindings/V8HTMLOptionsCollection.h:97:30: note: v8::Handle<v8::Value> WebCore::toV8(WTF::PassRefPtr<WebCore::HTMLOptionsCollection>, v8::Handle<v8::Object>, v8::Isolate*) out/Release/obj/gen/webkit/bindings/V8HTMLOptionsCollection.h:97:30: note: no known conversion for argument 1 from ‘WebCore::PropertyNodeList*’ to ‘WTF::PassRefPtr<WebCore::HTMLOptionsCollection>’ In file included from Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.cpp:42:0: out/Release/obj/gen/webkit/bindings/V8Node.h:61:30: note: v8::Handle<v8::Value> WebCore::toV8(WebCore::Node*, v8::Handle<v8::Object>, v8::Isolate*) out/Release/obj/gen/webkit/bindings/V8Node.h:61:30: note: no known conversion for argument 1 from ‘WebCore::PropertyNodeList*’ to ‘WebCore::Node*’ In file included from Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.cpp:42:0: out/Release/obj/gen/webkit/bindings/V8Node.h:88:30: note: v8::Handle<v8::Value> WebCore::toV8(WTF::PassRefPtr<WebCore::Node>, v8::Handle<v8::Object>, v8::Isolate*) out/Release/obj/gen/webkit/bindings/V8Node.h:88:30: note: no known conversion for argument 1 from ‘WebCore::PropertyNodeList*’ to ‘WTF::PassRefPtr<WebCore::Node>’ CXX(target) out/Release/obj.target/webcore_remaining/Source/WebCore/bindings/v8/custom/V8HTMLFormControlsCollectionCustom.o make: *** [out/Release/obj.target/webcore_remaining/Source/WebCore/bindings/v8/custom/V8HTMLCollectionCustom.o] Error 1 make: *** Waiting for unfinished jobs.... ============================= LINK(target) out/Release/TestWebKitAPI out/Release/../../Source/WebKit/chromium/third_party/gold/gold64: out/Release/obj.target/Source/WebCore/WebCore.gyp/libwebcore_bindings.a(out/Release/obj.target/Source/WebCore/WebCore.gyp/../../../webcore_bindings/gen/webkit/bindings/V8DerivedSources18.o): in function WebCore::V8HTMLPropertiesCollection::GetTemplate():V8DerivedSources18.cpp(.text._ZN7WebCore26V8HTMLPropertiesCollection11GetTemplateEv+0x127): error: undefined reference to 'WebCore::V8HTMLPropertiesCollection::namedPropertyGetter(v8::Local<v8::String>, v8::AccessorInfo const&)' collect2: error: ld returned 1 exit status make: *** [out/Release/webkit_unit_tests] Error 1 make: *** Waiting for unfinished jobs.... out/Release/../../Source/WebKit/chromium/third_party/gold/gold64: out/Release/obj.target/Source/WebCore/WebCore.gyp/libwebcore_bindings.a(out/Release/obj.target/Source/WebCore/WebCore.gyp/../../../webcore_bindings/gen/webkit/bindings/V8DerivedSources18.o): in function WebCore::V8HTMLPropertiesCollection::GetTemplate():V8DerivedSources18.cpp(.text._ZN7WebCore26V8HTMLPropertiesCollection11GetTemplateEv+0x127): error: undefined reference to 'WebCore::V8HTMLPropertiesCollection::namedPropertyGetter(v8::Local<v8::String>, v8::AccessorInfo const&)' collect2: error: ld returned 1 exit status make: *** [out/Release/TestWebKitAPI] Error 1
Attachments
Patch
(2.97 KB, patch)
2013-01-03 11:38 PST
,
Arko Saha
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Arko Saha
Comment 1
2013-01-03 11:38:13 PST
Created
attachment 181196
[details]
Patch
Ryosuke Niwa
Comment 2
2013-01-03 11:54:22 PST
Comment on
attachment 181196
[details]
Patch Okay. rs=me.
Arko Saha
Comment 3
2013-01-03 12:00:31 PST
Committed
r138725
: <
http://trac.webkit.org/changeset/138725
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug