Microdata: Fix build failure after r137003 https://bugs.webkit.org/show_bug.cgi?id=106023

Reviewed by Ryosuke Niwa.

Set HTMLCollection::namedPropertyGetter as named property getter for
HTMLPropertiesCollection in GenerateImplementationNamedPropertyGetter.

* bindings/scripts/CodeGeneratorV8.pm:
(GenerateImplementationNamedPropertyGetter):
* bindings/v8/custom/V8HTMLCollectionCustom.cpp:
(WebCore::V8HTMLCollection::namedPropertyGetter):


Canonical link: https://commits.webkit.org/124204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138725 268f45cc-cd09-0410-ab3c-d52691b4dbfc